--- a/website-frontend/package.json
+++ b/website-frontend/package.json
@@ -10,9 +10,7 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.20.1",
-        "express": "^4.18.2"
-    },
-    "devDependencies": {
+        "express": "^4.18.2",
         "nodemon": "^2.0.20"
     }
 }
