--- a/website-frontend/package.json
+++ b/website-frontend/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "body-parser": "^1.20.1",
         "express": "^4.18.2",
+        "express-fileupload": "^1.4.0",
         "nodemon": "^2.0.20"
     }
 }
