--- a/website-frontend/package.json
+++ b/website-frontend/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "server/script.js",
     "scripts": {
-        "start": "node server/script.js",
+        "start": "NODE_ENV=production node server/script.js",
         "test": "jest"
     },
     "author": "",
